# Social-Context

./: .gitignore  Cargo.toml  Makefile  README.md  ad4m.json  dna.js  index.ts  linksAdapter.ts  package-lock.json  package.json  release.sh
.github/workflows/: main.yml  release.yml
hc-dna/: .gitignore  Cargo.toml  README.md  package-lock.json
hc-dna/workdir/: dna.yaml  dna_basic.yaml  dna_basic_full_index.yaml  dna_full.yaml  dna_signals.yaml  dna_time_index.yaml
hc-dna/zomes/social_context/: Cargo.toml
hc-dna/zomes/social_context/src/: errors.rs  impls.rs  inputs.rs  lib.rs  methods.rs  utils.rs  validation.rs
hc-dna/zomes/social_context/src/validation/: mod.rs  utils.rs  validation.rs
hc-dna/zomes/tests/: basic-full-index-test.ts  basic-test.ts  common.ts  index.ts  link-delete.ts  package-lock.json  package.json  pagination-test.ts  playground.ts  signal-test.ts  subject-object-link.ts  subject-predicate-link.ts  subject-predicate-object-link.ts
hc-dna/zomes/tests/basic/: delete-link.ts  subject-object-link.ts  subject-predicate-link.ts  subject-predicate-object-link.ts
hc-dna/zomes/tests/basic-full-index/: delete-link.ts
hc-dna/zomes/tests/full-time-index/: delete-link.ts  subject-object-link.ts  subject-predicate-link.ts  subject-predicate-object-link.ts  wildcard-test.ts
hc-dna/zomes/tests/pagination/: ascending.ts  descending-large-timeframe.ts  descending.ts  utils.ts
private/social_context/zomes/social_context/code/: Cargo.toml
private/social_context/zomes/social_context/code/src/: lib.rs
private/social_context/zomes/social_graph/: zome.json
private/social_context/zomes/social_graph/code/: .hcbuild  Cargo.toml
private/social_context/zomes/social_graph/code/src/: definitions.rs  lib.rs  methods.rs
public/social_context/test/: package-lock.json  social_context.js
public/social_context/zomes/social_context/code/: Cargo.toml
public/social_context/zomes/social_context/code/src/: lib.rs  methods.rs
social-context.dna.workdir/: dna.json
social_context/test/: index.js
social_context/zomes/social_context/: zome.json
social_context/zomes/social_context/code/: .hcbuild  Cargo.toml
social_context/zomes/social_context/code/src/: lib.rs  methods.rs
workdir/: dna.yaml  dna_signals.yaml  dna_time_index.yaml  social-context.dna
zomes/chunked_social_context/: Cargo.toml
zomes/chunked_social_context/src/: inputs.rs  lib.rs  methods.rs
zomes/social_context/: Cargo.toml
zomes/social_context/src/: errors.rs  impls.rs  inputs.rs  lib.rs  methods.rs  utils.rs  validation.rs
zomes/social_context_acai/: Cargo.toml
zomes/social_context_acai/src/: inputs.rs  lib.rs  methods.rs
zomes/social_context_chunked/: Cargo.toml
zomes/social_context_chunked/src/: inputs.rs  lib.rs  methods.rs  out.rs
zomes/social_context_link_store/: Cargo.toml
zomes/social_context_link_store/src/: inputs.rs  lib.rs  methods.rs
zomes/social_context_time_indexed/: Cargo.toml
zomes/social_context_time_indexed/src/: lib.rs  methods.rs
zomes/tests/: acai-link-tests.ts  basic-test.ts  chunked-tests.ts  index.ts  linked-sc-tests.ts  package-lock.json  package.json
