[package]
authors = ["josh@junto.foundation"]
edition = "2018"
name = "social_context"
version = "0.0.1"

[lib]
crate-type = ["cdylib", "rlib"]
name = "social_context"

[dependencies]
derive_more = "0"
serde = "1"
lazy_static = "*"
#meta-traits = { git = "https://github.com/juntofoundation/Holochain-Trait-Definitions", branch = "master" }
meta-traits = {path = "../../../Holochain-Trait-Definitions"}


hdk3 = "0"
holo_hash = "0"