[package]
authors = ["josh@junto.foundation"]
edition = "2018"
name = "social_context_acai"
version = "0.0.1"

[lib]
crate-type = ["cdylib", "rlib"]
name = "social_context_acai"

[dependencies]
derive_more = "0"
serde = "1"
lazy_static = "*"
#meta-traits = { git = "https://github.com/juntofoundation/Holochain-Trait-Definitions", branch = "master" }
meta-traits = {path = "../../../Holochain-Trait-Definitions"}
chrono = {version = "*", features=["serde"] }

hdk3 = "0"
holo_hash = "0"