[package]
authors = ["josh@junto.foundation"]
edition = "2018"
name = "social_context_time_indexed"
version = "0.0.1"

[lib]
crate-type = ["cdylib", "rlib"]
name = "social_context_time_indexed"

[dependencies]
derive_more = "0"
serde = "1"
lazy_static = "*"
chrono = { version = "*", features=["serde"] }
#hc_time_index = { git = "https://github.com/juntofoundation/HC-Time-Chunking", branch = "main" }
hc_time_index = { path = "../../../time_delimited_indexing" }

hdk3 = "0"