[package]
authors = ["josh@junto.foundation"]
edition = "2018"
name = "social_context"
version = "0.0.1"

[lib]
crate-type = ["cdylib", "rlib"]
name = "social_context"

[dependencies]
derive_more = "0"
serde = "1"
lazy_static = "*"
chrono = { version = "0.4", features=["serde"] }
hc_time_index = { git = "https://github.com/juntofoundation/HC-Time-Chunking", branch = "main" }
#hc_time_index = { path = "../../../../holochain-time-index" }
thiserror = "1.0.20"
hex = "*"

hdk = "0.0.101-alpha.0"
holo_hash = "0.0.2-alpha.1"