[package]
authors = ["josh@junto.foundation"]
edition = "2018"
name = "social_context"
version = "0.0.1"

[lib]
crate-type = ["cdylib", "rlib"]
name = "social_context"

[dependencies]
derive_more = "0"
serde = "1"
lazy_static = "*"
chrono = { version = "0.4", features=["serde"] }
hc_time_index = { git = "https://github.com/perspect3vism/holochain-time-index", branch = "hdk-0.0.108" }
thiserror = "1.0.20"
hex = "*"

hdk = "0.0.108"
holo_hash = "0.0.5"